--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>amazed-web-components</title>
+    <title>mettle-web-components</title>
   </head>
   <body>
     <script type="module">
-      import { html } from 'https://cdn.jsdelivr.net/npm/amazed/dist/amazed.full-esm.js';
-      import { createApp } from 'https://unpkg.com/amazed-web-components@0.0.3/dist/amazed-web-components.esm.js';
+      import { html } from 'https://cdn.jsdelivr.net/npm/mettle/dist/mettle.full-esm.js';
+      import { createApp } from 'https://unpkg.com/mettle-web-components@0.1.1/dist/mettle-web-components.esm.js';
       import register from './components/register.js';
 
       register();
